welcome.lessons.welcome.array.basics.Array1.scala.code
override def run() {
var T= new Array[Color](getMondeHauteur())

for (i<-0 to (getMondeHauteur()-1)){
	
     T(i)=getCouleurSol()
	getCouleurBrosse(getCouleurSol())
	baisseBrosse();
	leveBrosse();
	
	avance()
}
gauche();
avance();
droite();
avance();


   
}


